--- a/src/components/CoinPortfolio/style.scss
+++ b/src/components/CoinPortfolio/style.scss
@@ -27,6 +27,6 @@
 
 @media (min-width: 1200px) {
   .wallet-data {
-    @apply grid-cols-4;
+    // @apply grid-cols-4;
   }
 }
